--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,5 +1,5 @@
 # .github/workflows/linter.yml
-name: Linter Check
+name: CI Workflow
 
 on:
   push:
@@ -25,8 +25,30 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pylint
-
+          
       - name: Run linter
         run: |
           pylint **/*.py
+
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Run unit tests
+        run: |
+          pytest --maxfail=1 --disable-warnings -q
 
