--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,3 @@
-# .github/workflows/linter.yml
 name: CI Workflow
 
 on:
@@ -24,10 +23,13 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd python-fast-app
+          pip install -r requirements.txt
           pip install pylint
-          
+
       - name: Run linter
         run: |
+          cd python-fast-app
           pylint **/*.py
 
   test:
@@ -45,10 +47,12 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd python-fast-app
           pip install -r requirements.txt
           pip install pytest
 
       - name: Run unit tests
         run: |
+          cd python-fast-app
           pytest --maxfail=1 --disable-warnings -q
 
