--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,3 +1,4 @@
+# .github/workflows/linter.yml
 name: CI Workflow
 
 on:
@@ -23,15 +24,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd python-fast-app
-          pip install -r requirements.txt
           pip install pylint
-
+          
       - name: Run linter
         run: |
-          cd python-fast-app
           pylint **/*.py
-
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
@@ -47,12 +44,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd python-fast-app
           pip install -r requirements.txt
           pip install pytest
-
       - name: Run unit tests
         run: |
-          cd python-fast-app
           pytest --maxfail=1 --disable-warnings -q
 
