--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,3 @@
-# .github/workflows/linter.yml
 name: CI Workflow
 
 on:
@@ -22,13 +21,15 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install linter
         run: |
           pip install pylint
-          
+
       - name: Run linter
         run: |
+          cd python-fast-app
           pylint **/*.py
+
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
@@ -44,9 +45,12 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd python-fast-app
           pip install -r requirements.txt
           pip install pytest
+
       - name: Run unit tests
         run: |
+          cd python-fast-app
           pytest --maxfail=1 --disable-warnings -q
 
