--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,5 +1,4 @@
-# .github/workflows/linter.yml
-name: Linter Check
+name: CI Pipeline
 
 on:
   push:
@@ -25,13 +24,12 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pylint
+
       - name: Run linter
         run: |
           pylint **/*.py
 
-
-
-test:
+  test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: lint
@@ -47,7 +45,8 @@ test:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install pytest
+
       - name: Run unit tests
         run: |
           pytest --maxfail=1 --disable-warnings -q
+
