--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -46,6 +46,10 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Verify pytest installation
+        run: |
+          pip show pytest
+
       - name: Run unit tests
         run: |
           pytest --maxfail=1 --disable-warnings -q
