--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -29,28 +29,28 @@ jobs:
         run: |
           pylint **/*.py
 
-  test:
-    name: Run Unit Tests
+  build:
+    name: Build and Test with Docker
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
+      - name: Install Docker Compose
         run: |
-          pip install -r requirements.txt
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
-      - name: Verify pytest installation
+      - name: Generate required .env file
         run: |
-          pip show pytest
+          echo DEBUG=True >> .env
+          echo FLASK_DEBUG=1 >> .env
+          echo FLASK_APP=run.py >> .env
 
-      - name: Run unit tests
-        run: |
-          pytest --maxfail=1 --disable-warnings -q
+      - name: Build Docker containers
+        run: docker-compose build
+
+      - name: Run tests
+        run: docker-compose up unit-test-container
 
